--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 	<br/><br/>
 	<p>un p de description</p><br><br>
 	<a href="contact.html">Contact</a>
+	<a href="photos.html">Photos</a>
 </body>
 </html>
